--- a/dashboard/css/style.css
+++ b/dashboard/css/style.css
@@ -370,6 +370,10 @@ a {
 	color: var(--link-color-active);
 }
 
+.form {
+	margin-left: 5%;
+} 
+
 .messages-section {
 	flex-shrink: 0;
 	padding-bottom: 32px;
@@ -408,65 +412,6 @@ a {
 	background-color: var(--projects-section);
 }
 
-.message-box {
-	border-top: 1px solid var(--message-box-border);
-	padding: 16px;
-	display: flex;
-	align-items: flex-start;
-	width: 100%;
-}
-
-.message-box:hover {
-	background-color: var(--message-box-hover);
-	border-top-color: var(--link-color-hover);
-}
-
-.message-box:hover+.message-box {
-	border-top-color: var(--link-color-hover);
-}
-
-.message-box img {
-	border-radius: 50%;
-	object-fit: cover;
-	width: 40px;
-	height: 40px;
-}
-
-.message-header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	width: 100%;
-}
-
-.message-header .name {
-	font-size: 16px;
-	line-height: 24px;
-	font-weight: 700;
-	color: var(--main-color);
-	margin: 0;
-}
-
-.message-content {
-	padding-left: 16px;
-	width: 100%;
-}
-
-.star-checkbox input {
-	opacity: 0;
-	position: absolute;
-	width: 0;
-	height: 0;
-}
-
-.star-checkbox label {
-	width: 24px;
-	height: 24px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	cursor: pointer;
-}
 
 .dark .star-checkbox {
 	color: var(--secondary-color);
