--- a/formularios-atividades/css/style.css
+++ b/formularios-atividades/css/style.css
@@ -37,7 +37,87 @@ html,body{
     height: 100%;
 }
 
-.card-post{
-  background-color: var(--primary-50);
+.conteiner{
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
+.form-post{
+	background-color: var(--primary-50);
+	width: 505px;
+	padding: 14px 21px;
+	display: flex;
+	flex-direction: column;
+	gap: 16px;
+	border-radius: 8px;
+}
+
+.form-titulo{
+	text-align: center;
+	font-weight: 200;
+	font-size: 20.59px;
+}
+
+.risco{
+	border: 1px solid white;
+}
+
+.form-user {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.user-photo {
+	width: 48px;
+	height: 48px;
+	border-radius: 50%;
+}
+
+.user-name {
+	font-size: 13.72px;
+	font-weight: 500;
+}
+
+textarea{
+	width: 100%;
+	height: 90px;
+	resize: none;
+	border: none;
+}
+
+textarea::placeholder {	
+	text-align: center;
+	line-height: 90px;
+	color: var(--gray-500);
+	
+}
+
+.publish-resources {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 8px;
+	border: 0.5px white solid;
+	border-radius: 8px;
+}
+
+.publish-titulo {
+	font-size: 13.72px;
+}
+
+.link-icon {
+	text-decoration: none;
+	color: black;
+}
+
+.btn-post {
+	height: 53px;
+	border-radius: 8px;
+	border: none;
+	background-color: var(--primary-500);
+	color: white;
+	font-weight: 500;
+}
